# django_osvobozjdenniy

./: pyproject.toml
my_proj/: db.sqlite3
my_proj/my_app/: models.py
my_proj/my_app/migrations/: 0001_initial.py  0002_book_author_buy_books_buy_client_buy_employee_and_more.py
my_proj/my_proj/: asgi.py  settings.py  urls.py  wsgi.py
