[tool.poetry]
name = "my-pr"
version = "0.1.0"
description = ""
authors = ["Adept_Cthulhu"]
readme = "README.md"
packages = [{include = "my_pr"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
pillow = "^9.4.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
